--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Josef Alexander Moosholzer - Portfolio Projects
+email: jamoosholzer@hotmail.de
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Web-scraping, Data Analytics & Visualizations. Mostly in Python, some SQL and Tableau.
+  Find all Portfolio Projects by Josef A. Moosholzer.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  JosefMoosholzer
+linkedin_username: josef-alexander-moosholzer-819050201
 
 # Build settings
 theme: minima
