--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Josef Alexander Moosholzer - Portfolio Projects
+title: Portfolio Projects
 email: jamoosholzer@hotmail.de
 description: >- # this means to ignore newlines until "baseurl:"
   Web-scraping, Data Analytics & Visualizations. Mostly in Python, some SQL and Tableau.
