--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,9 @@ site: Personal Jekyll Theme
 url: 
 baseurl: 
 
+github: JosefMoosholzer
+linkedin: josef-alexander-moosholzer-819050201
+
 collections:
   pages:
     output: true
@@ -40,6 +43,7 @@ defaults:
       layout: "project"
 
 markdown: kramdown
+linkedin
 
 kramdown:
   input: GFM
