--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 basic_settings:
-  site_title: Personal
+  site_title: Portfolio Projects by Josef A. Moosholzer
   favicon_image: /images/favicon.png
 
 header_settings:
@@ -50,7 +50,7 @@ social_settings:
   dribbble_url: ''
   behance_url: ''
   deviantart_url: ''
-  github_url: ''
+  github_url: 'https://github.com/JosefMoosholzer'
   reddit_url: ''
   flickr_url: ''
   etsy_url: ''
@@ -58,7 +58,7 @@ social_settings:
   soundcloud_url: ''
   spotify_url: ''
   bandcamp_url: ''
-  linkedin_url: ''
+  linkedin_url: 'https://www.linkedin.com/in/josef-alexander-moosholzer-819050201/'
 
 color_settings:
   background_color: '#ffffff'
