--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 basic_settings:
-  site_title: Personal Projects and Blog
+  site_title: Data Analytics Projects
   favicon_image: /images/favicon.png
 
 header_settings:
