--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
   site_title: Data Analytics Projects
-  favicon_image: /images/favicon.png
+  favicon_image: /images/title_icon.png
 
 header_settings:
   logo_image: 
@@ -21,15 +21,15 @@ footer_settings:
   footer_tagline: by Josef A. Moosholzer
 
 hero_settings:
-  overlay_opacity: 0.8
+  overlay_opacity: 0.4
 
 post_settings:
   grid_spacing: 10
 
 contact_settings:
-  form_action: ''
+  form_action: 'https://formspree.io/f/xyyvdanl'
   confirmation_url: '/thanks'
-  email_subject: 'Contact form submission'
+  email_subject: 'Contact form submission - GitHub Page'
   send_button_text: 'Send Message'
 
 social_settings:
@@ -61,7 +61,7 @@ social_settings:
   linkedin_url: 'https://www.linkedin.com/in/josef-alexander-moosholzer-819050201/'
 
 color_settings:
-  background_color: '#ffffff'
+  background_color: '#eeeeee'
   background_alt_color: '#f4f5f6'
   text_dark_color: '#2A2F36'
   text_medium_color: '#6C7A89'
