--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,7 +21,7 @@ footer_settings:
   footer_tagline: by Josef A. Moosholzer
 
 hero_settings:
-  overlay_opacity: 0.2
+  overlay_opacity: 0.99
 
 post_settings:
   grid_spacing: 10
@@ -62,7 +62,7 @@ social_settings:
 
 color_settings:
   background_color: '#eeeeee'
-  background_alt_color: '#f4f5f6'
+  background_alt_color: '#000000'
   text_dark_color: '#2A2F36'
   text_medium_color: '#6C7A89'
   text_light_color: '#ABB7B7'
