Changed Title icon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
   site_title: Data Analytics Projects
-  favicon_image: /images/title_icon.png
+  favicon_image: /images/data-analytics.png
 
 header_settings:
   logo_image: 
