--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -34,7 +34,7 @@ contact_settings:
 
 social_settings:
   facebook_url: ''
-  twitter_url: ''
+  twitter_url: 'https://twitter.com/JMoosholzer'
   instagram_url: ''
   snapchat_url: ''
   youtube_url: ''
